--- a/src/Services/Ordering/Ordering.API/appsettings.json
+++ b/src/Services/Ordering/Ordering.API/appsettings.json
@@ -1,9 +1,11 @@
 {
-  "CacheSettings": {
-    "ConnectionString": "localhost:6379"
+  "ConnectionStrings": {
+    "OrderingConnectionString": "Server=localhost;Database=OrderDb;User Id=sa;Password=admin1234;"
   },
-  "GrpcSettings": {
-    "DiscountUrl": "http://localhost:5003"
+  "EmailSettings": {
+    "FromAddress": "jtran79@gmail.com",
+    "ApiKey": "",
+    "FromName": "John"
   },
   "EventBusSettings": {
     "HostAddress": "amqp://guest:guest@localhost:5672"
