--- a/src/Services/Ordering/Ordering.API/appsettings.json
+++ b/src/Services/Ordering/Ordering.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "OrderingConnectionString": "Server=localhost;Database=OrderDb;User Id=sa;Password=admin1234;"
+    "OrderingConnectionString": "Server=localhost;Database=OrderDb;User Id=sa;Password=Pass@123456789;"
   },
   "EmailSettings": {
     "FromAddress": "jtran79@gmail.com",
