--- a/src/WebApps/AspnetRunBasics/AspnetRunBasics.csproj
+++ b/src/WebApps/AspnetRunBasics/AspnetRunBasics.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="Polly.Extensions.Http" Version="3.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\BuildingBlocks\Common.Logging\Common.Logging.csproj" />
+  </ItemGroup>
+
 </Project>
